--- a/products.html
+++ b/products.html
@@ -16,14 +16,14 @@
 </head>
 <body>
     <header>
-        <input type="checkbox" id="nav-checkbox">
-        <label for="nav-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="nav-checkbox" aria-label="Open the menu">
+        <label for="nav-checkbox" class="hamburger-icon" aria-label="Menu for mobile users"><i class="fas fa-bars"></i></label>
         <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html">Games</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
-                <a href="view-cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="view-cart.html" aria-label="Cart"><i class="fa-solid fa-cart-shopping"></i></a>
         </nav>
     </header>
 <main>
@@ -33,61 +33,70 @@
 <section>
     <div class="product-container">
         <div class="game game-1"><a href="product-page.html"><img src="images/GameHub_covers.jpg" alt="Ping Pong Championship" class="productImage">
-        <h3>Ping Pong</h3></a>
+        <h3>Ping Pong</h3></a><h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button type="submit" formaction="./product-page.html" class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-2"><img src="images/GameHub_covers2.jpg" alt="Super Duper" class="productImage">
         <h3>Super Duper</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button type="submit" formaction="./product-page.html" class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-3"><img src="images/GameHub_covers3.jpg" alt="Black" class="productImage">
         <h3>Black</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-4"><img src="images/GameHub_covers4.jpg" alt="Furious" class="productImage">
         <h3>Furious</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-5"><img src="images/GameHub_covers5.jpg" alt="Assassin" class="productImage">
         <h3>Assassin</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-6"><img src="images/GameHub_covers6.jpg" alt="Space War" class="productImage">
         <h3>Space War</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-7"><img src="images/GameHub_covers7.jpg" alt="Racing" class="productImage">
         <h3>Racing</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-8"><img src="images/GameHub_covers8.jpg" alt="Boxer" class="productImage">
         <h3>Boxer</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-9"><img src="images/GameHub_covers9.jpg" alt="Cyberpunk" class="productImage">
         <h3>Cyberpunk</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
         </form></div>
         <div class="game game-10"><img src="images/GameHub_covers10.jpg" alt="Forge Legend" class="productImage">
         <h3>Forge Legend</h3>
+        <h4>$49</h4>
         <form action="./product-page.html">
         <button type="submit" formaction="./view-cart.html" class="products-btn">Add to cart</button>
         <button class="products-btn">Buy now</button>
