Going through marking criteria
Made small adjustments to align with the marking criteria of the CA

--- a/payment-options.html
+++ b/payment-options.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/payment-selection.css">
     <link rel="icon" type="image/x-icon" href="images/ghfavicon.ico">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>GameHub | Adress</title>
+    <title>GameHub | Personal Information</title>
 </head>
 <body>
     <header>
