--- a/view-cart.html
+++ b/view-cart.html
@@ -57,7 +57,7 @@
 
 
 <div class="discount-container">
-    <label for="discount">Code</label>
+    <label for="discount">Discount</label>
     <input type="text" name="discount-code" id="discount" class="discount-code">
     <form action="./view-cart.html">
     <input type="submit" value="Claim" class="discount-btn">
